<resources>
    <string name="app_name">Sonora</string>
    <string name="widget_mini_title">Sonora Mini Player</string>
    <string name="widget_full_title">Sonora Full Player</string>
    <string name="widget_mini_description">Compact Sonora playback controls.</string>
    <string name="widget_full_description">Sonora player with progress, shuffle and repeat controls.</string>
    <string name="widget_nothing_playing">Nothing playing</string>
    <string name="widget_open_sonora_to_play">Open Sonora to play music</string>
    <string name="widget_album_art">Album artwork</string>
    <string name="widget_playback_progress">Playback progress</string>
    <string name="widget_toggle_playback">Play or pause</string>
    <string name="widget_previous">Previous track</string>
    <string name="widget_next">Next track</string>
    <string name="widget_shuffle">Shuffle</string>
    <string name="widget_repeat">Repeat mode</string>
    <string name="home_tagline">Your music, simply.</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_playlists">Playlists</string>
    <string name="action_close_search">Close search</string>
    <string name="action_search_music">Search music</string>
    <string name="action_settings">Settings</string>
    <string name="home_permission_error">Sonora does not have permission to read your music.</string>
    <string name="home_load_error">Unable to load your music library.</string>
    <string name="home_load_title">Unable to load music</string>
    <string name="home_no_music">No music found</string>
    <string name="home_add_music">Add music to your device and try again.</string>
    <string name="home_no_search_results">Nothing matches &quot;%1$s&quot;.</string>
    <string name="song_count_one">1 song</string>
    <string name="song_count_other">%1$d songs</string>
    <string name="search_music">Search Music</string>
    <string name="permission_title">Access your music</string>
    <string name="permission_explanation">Sonora needs access to your audio files to find and play the music stored on your device.</string>
    <string name="action_allow">Allow</string>
    <string name="action_not_now">Not now</string>
    <string name="permission_required_title">Music access is required</string>
    <string name="permission_required_message">Allow Sonora to access your music library to load your songs.</string>
    <string name="action_allow_access">Allow access</string>
    <string name="settings_title">Settings</string>
    <string name="settings_tagline">Make Sonora feel at home.</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_device_default">Device default</string>
    <string name="settings_dynamic_color">Dynamic color</string>
    <string name="settings_dynamic_color_detail">Use colors from your wallpaper</string>
    <string name="settings_palette_style">Palette style</string>
    <string name="settings_custom_color">Custom colour</string>
    <string name="settings_custom_color_detail">Pick a colour or adjust the hue</string>
    <string name="settings_pure_black">Pure black</string>
    <string name="settings_pure_black_detail">Use pure black surfaces in dark mode</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_permission_music">Music access</string>
    <string name="settings_permission_music_detail">Find and play music on your device.</string>
    <string name="settings_permission_photos">Photo access</string>
    <string name="settings_permission_photos_detail">Use photos for artwork.</string>
    <string name="settings_permission_notifications">Notifications</string>
    <string name="settings_permission_notifications_detail">Show playback and update notifications.</string>
    <string name="settings_permission_media_edit">Artwork and metadata</string>
    <string name="settings_permission_media_edit_detail">Edit artwork and song details.</string>
    <string name="settings_permission_media_delete">Delete music</string>
    <string name="settings_permission_media_delete_detail">Remove music from your device.</string>
    <string name="settings_permission_media_delete_ondemand">Confirmation is required before removing a song.</string>
    <string name="settings_permission_media_ondemand">Android asks for access when a media change is made.</string>
    <string name="settings_permission_ringtone">Ringtone settings</string>
    <string name="settings_permission_ringtone_detail">Set songs as your ringtone.</string>
    <string name="settings_permission_install_updates">Install updates</string>
    <string name="settings_permission_install_updates_detail">Install downloaded updates.</string>
    <string name="settings_unrestricted_battery">Unrestricted battery usage</string>
    <string name="settings_unrestricted_battery_detail">Keep playback running in the background.</string>
    <string name="settings_permission_allowed">Allowed</string>
    <string name="settings_permission_allow">Allow</string>
    <string name="settings_permission_ondemand">On demand</string>
    <string name="settings_playback">Playback</string>
    <string name="settings_resume_playback">Resume playback</string>
    <string name="settings_resume_playback_detail">Continue from where you left off</string>
    <string name="settings_gapless_playback">Gapless playback</string>
    <string name="settings_gapless_playback_detail">Start the next track without a pause</string>
    <string name="settings_crossfade">Crossfade</string>
    <string name="settings_crossfade_off">Off</string>
    <string name="settings_crossfade_value">%1$d seconds</string>
    <string name="settings_normalize_volume">Normalize volume</string>
    <string name="settings_normalize_volume_detail">Use ReplayGain to keep track loudness consistent</string>
    <string name="settings_about">About</string>
    <string name="about_sonora">Sonora</string>
    <string name="about_sonora_detail">A simple local music player for Android.</string>
    <string name="about_sonora_description">Your music, simply.</string>
    <string name="about_made_with_prefix">Made with</string>
    <string name="about_made_with_suffix">by Sipun</string>
    <string name="about_open_source">Open source</string>
    <string name="about_open_source_detail">View the source code on GitHub.</string>
    <string name="about_version">Version %1$s</string>
    <string name="action_create_playlist">Create playlist</string>
    <string name="action_delete_playlist">Delete playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_remove">Remove</string>
    <string name="action_create">Create</string>
    <string name="action_ok">OK</string>
    <string name="action_try_again">Try again</string>
    <string name="more_options">More options</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="added">Added</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="open_album">Open album</string>
    <string name="open_artist">Open artist</string>
    <string name="song_info">Song info</string>
    <string name="your_playlists">Your playlists</string>
    <string name="create_first_playlist">Create your first playlist</string>
    <string name="build_collections">Build collections from your local music.</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="your_library">Your library</string>
    <string name="ready_to_play">Ready to play</string>
    <string name="play_all">Play all</string>
    <string name="recently_added">Recently added</string>
    <string name="continue_listening">Continue listening</string>
    <string name="update_download_failed">Update download failed. Please try again.</string>
    <string name="update_file_missing">Downloaded update is no longer available.</string>
    <string name="update_permission_required">Allow Sonora to install updates, then try again.</string>
    <string name="update_install_failed">Could not open the update installer.</string>
    <string name="update_checking">Checking for updates</string>
    <string name="update_checking_message">Checking GitHub for the latest Sonora release.</string>
    <string name="update_check_failed">Couldn\'t check for updates</string>
    <string name="update_check_failed_message">Sonora couldn\'t reach GitHub right now. Check your internet connection and try again.</string>
    <string name="update_up_to_date">You\'re up to date</string>
    <string name="update_latest_prefix">You\'re already running the latest version, </string>
    <string name="playlist_count_one">1 playlist</string>
    <string name="playlist_count_other">%1$d playlists</string>
    <string name="create_playlist_to_save">Create a playlist to save this song.</string>
    <string name="already_added">Already added</string>
    <string name="action_add_to_playlist">Add to %1$s</string>
    <string name="action_create_new_playlist">Create new playlist</string>
    <string name="action_done">Done</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="remove_from_library_question">Remove from library?</string>
    <string name="remove_from_library_message">This will permanently remove the audio file from your device.</string>
    <string name="lyrics_title">Lyrics</string>
    <string name="lyrics_unavailable">Lyrics unavailable</string>
    <string name="lyrics_retry">Try again</string>
    <string name="edit_metadata">Edit metadata</string>
    <string name="metadata_title">Title</string>
    <string name="metadata_artist">Artist</string>
    <string name="metadata_album">Album</string>
    <string name="metadata_album_artist">Album artist</string>
    <string name="metadata_genre">Genre</string>
    <string name="metadata_year">Year</string>
    <string name="metadata_track">Track</string>
    <string name="metadata_disc">Disc</string>
    <string name="metadata_composer">Composer</string>
    <string name="metadata_comment">Comment</string>
    <string name="metadata_grouping">Grouping</string>
    <string name="metadata_lyrics">Lyrics</string>
    <string name="metadata_copyright">Copyright</string>
    <string name="metadata_bpm">BPM</string>
    <string name="metadata_artwork">Artwork</string>
    <string name="metadata_add_artwork">Add artwork</string>
    <string name="metadata_change_artwork">Change artwork</string>
    <string name="metadata_remove_artwork">Remove artwork</string>
    <string name="metadata_save">Save changes</string>
    <string name="metadata_save_failed">Couldn\'t save metadata: %1$s</string>
    <string name="widget_now_playing">Now playing</string>
    <string name="widget_paused">Paused</string>
</resources>
